# my-claude

./: .gitignore  README.md
.claude/: CLAUDE.md  README-REEL-STRUCTURE.md  README-profiles.md  SECOND_BRAIN.md  bootstrap-reel-structure.sh  gsd-file-manifest.json  mcp-servers.template.json  package.json  settings.json  settings.local.template.json  statusline-command.sh
.claude-mem/: settings.template.json
.claude-mem-hybrid/: README.md  docker-compose.yml  init.sql  mcp_memory_server.py  run_mem_hybrid.sh
.claude/agents/: architect.md  cct-incident-responder.md  deployer.md  frontend-ux-engineer.md  gsd-roadmapper.md  implementer.md  infra-sre-lead.md  repo-curator.md  reviewer.md  scout.md  security-auditor.md  team-orchestrator.md  tester.md  web-researcher.md
.claude/commands/: auto-browser.md
.claude/dashboard/: QUICK-START-MONITOR.md  QUICKSTART.md  README.md  STATUS_DASHBOARD_SUMMARY.md  osa-dashboard.html  osa-dashboard.py  osa-monitor.py  osa-status-fast.sh  osa-status.sh  status.sh  test-monitor.sh
.claude/docs/: cct-integration-manifest.md
.claude/docs/frameworks/: config.py  error_handler.py  logger.py  orchestrator 2.py  orchestrator.py  pact_framework 2.py  pact_framework_v2.py  persistence.py  pyproject.toml  requirements 2.txt  run_validation_tests.py  setup.py  swarm_executor.py
.claude/hooks/: block-env-commit.sh  cct-conventional-commits.py  cct-secret-scanner.py  pre-compact.sh  security-check.sh  session-end-cleanup.sh  session-start.sh  setup-init.sh  smart-dispatcher.sh  smart-permission.py  smart-stop-gate.py  stop-verify.sh  subagent-start.py  subagent-stop.py  task-completed.sh  teammate-idle.sh  unified-post-hook.py  update-scratchpad.sh  validate-prompt.py  validate-structure.py
.claude/methods/: ref_banner_startsh.md  ref_bootstrap_project.md  ref_deploy_workflow.md  ref_handoff_system.md  ref_security_standards.md  ref_ui_no_emoji.md
.claude/output-styles/: engineering.md  mentor.md
.claude/plans/: agile-growing-sphinx.md  deep-honking-beaver.md  elegant-plotting-lake.md  frolicking-snuggling-pinwheel.md  fuzzy-plotting-ember.md  fuzzy-shimmying-sunset.md  glowing-chasing-pebble.md  happy-drifting-wigderson.md  joyful-fluttering-wigderson.md  melodic-scribbling-pretzel.md  radiant-frolicking-russell.md  replicated-foraging-blanket.md  tranquil-cooking-dusk.md  transient-puzzling-toast.md  warm-nibbling-globe.md  zippy-watching-puzzle.md
.claude/plugins/: blocklist.json  installed_plugins.json  known_marketplaces.json
.claude/profiles/: hackathon.json  hackathon.json.bak-20260312_122815  mvp.json  mvp.json.bak-20260312_122815  team.json  team.json.bak-20260312_122815  xquads.json  xquads.json.bak-20260312_122815  yolo.json  yolo.json.bak-20260312_122815
.claude/skills/: paperclip  paperclip-create-agent  paperclip-create-plugin  (+1 more)
.codex/: AGENTS.md  config.template.toml
docs/: architecture.md  memory.md
scripts/: build_inventory.py  install.sh
(+211 files in other folders)
